--- a/AnomalyDetection.html
+++ b/AnomalyDetection.html
@@ -62,6 +62,11 @@
             Spacio-Temporal data
           </i>:
         </li>
+        <li>
+          <i>
+            Non numeric data
+          </i>
+        </li>
       </ul>
       <p>
         <strong>
