--- a/AnomalyDetection.html
+++ b/AnomalyDetection.html
@@ -125,6 +125,11 @@
           provides utility functions for outlier detection in large-scale data. It includes LOF and outlier detection method based on departure from histogram.
         </li>
         <li>
+          Package
+<a href="../packages/DescTools/index.html">DescTools</a>
+          provides functions for outlier detection using LOF and Tukey’s boxplot definition.
+        </li>
+        <li>
           Functions
 <tt>LOF()</tt>
           and
@@ -211,6 +216,13 @@ distributions.
           performs outlier identification using robust multivariate methods based on robust mahalanobis distances and principal component analysis.
         </li>
         <li>
+          Function
+<tt>dm.mahalanobis</tt>
+          in
+<a href="../packages/DJL/index.html">DJL</a>
+          package  implements Mahalanobis distance measure for outlier detection. In addition to the basic distance measure, boxplots are provided with potential outlier(s) to give an insight into the early stage of data cleansing task.
+        </li>
+        <li>
           Package
 <a href="../packages/mrfDepth/index.html">mrfDepth</a>
           provides tools to compute depth measures and implementations of related tasks such as outlier detection, data exploration and classification of multivariate, regression and functional data.
@@ -240,13 +252,23 @@ finding multivariate outliers by searching for a subset which minimizes a criter
         <li>
           Package
 <a href="../packages/FastHCS/index.html">FastHCS</a>
-          implements robust Aalgorithm for principal component analysis and thereby provide robust PCA modelling and associated outlier detection and diagnostic tools  for high-dimensional data.
+          implements robust algorithm for principal component analysis and thereby provide robust PCA modelling and associated outlier detection and diagnostic tools  for high-dimensional data.
 <a href="../packages/FastHCS/index.html">FastHCS</a>
+        </li>
+        <li>
+          Package
+<a href="../packages/FactoInvestigate/index.html">FactoInvestigate</a>
+          implements PCA based outlier detection tools.
         </li>
         <li>
           Package
 <a href="../packages/CrossClustering/index.html">CrossClustering</a>
           implements a partial clustering algorithm that combines the Ward's minimum variance and Complete Linkage algorithms, providing automatic estimation of a suitable number of clusters and identification of outlier elements.
+        </li>
+        <li>
+          Package
+<a href="../packages/DMwR2/index.html">DMwR2</a>
+          uses hierarchical clustering to obtain a ranking of outlierness for a set of cases. The ranking is obtained on the basis of the path each case follows within the merging steps of a agglomerative hierarchical clustering method.
         </li>
       </ul>
       <p>
@@ -380,6 +402,11 @@ finding multivariate outliers by searching for a subset which minimizes a criter
 <a href="../packages/biogeo/index.html">biogeo</a>
           provides functions for error detection and correction in point data quality datasets that are used in species distribution modelling.
         </li>
+        <li>
+          Package
+<a href="../packages/CoordinateCleaner/index.html">CoordinateCleaner</a>
+          provides functions for flagging of common spatial and temporal outliers (errors) in biological and paleontological collection data, for the use in conservation, ecology and paleontology.
+        </li>
       </ul>
       <p>
         <strong>
@@ -398,6 +425,18 @@ finding multivariate outliers by searching for a subset which minimizes a criter
           Package
 <a href="../packages/adamethods/index.html">adamethods</a>
           provides a collection of several algorithms to obtain archetypoids with small and large databases and with both classical multivariate data and functional data (univariate and multivariate). Some of these algorithms also allow to detect anomalies.
+        </li>
+        <li>
+          Function
+<tt>shape.fd.outliers</tt>
+          in
+<a href="../packages/ddalpha/index.html">ddalpha</a>
+          package  detects functional outliers of first three orders, based on the order extended integrated depth for functional data.
+        </li>
+        <li>
+          Package
+<a href="../packages/fda.usc/index.html">fda.usc</a>
+          provides tool for  outlier detection in functional data  (atypical curves detection) using different approaches such as likelihood ratio test, depth measures, quantiles of the bootstrap samples.
         </li>
       </ul>
       <p>
@@ -506,7 +545,12 @@ Principal Component Analysis.
         <li>
           Package
 <a href="../packages/KRIS/index.html">KRIS</a>
-          provides useful functions which are needed for bioinformatic analysis including  detction of rough structures and outliers using unsupervised clustering.
+          provides useful functions which are needed for bioinformatic analysis including  detection of rough structures and outliers using unsupervised clustering.
+        </li>
+        <li>
+          Package
+<a href="../packages/dave/index.html">dave</a>
+          provides a collection of functions for  data analysis in vegetation ecology including outlier detection using nearest neighbour distances.
         </li>
       </ul>
       <p>
@@ -560,6 +604,11 @@ finding outliers in the regression setting.  RCS is supported by
         </li>
         <li>
           Package
+<a href="../packages/compositions/index.html">compositions</a>
+          provides functions  to detect various types of outliers in compositional datasets.
+        </li>
+        <li>
+          Package
 <a href="../packages/kuiper.2samp/index.html">kuiper.2samp</a>
           performs the two-sample Kuiper test to assess the anomaly of continuous, one-dimensional probability distributions.
         </li>
@@ -574,6 +623,11 @@ finding outliers in the regression setting.  RCS is supported by
           Package
 <a href="../packages/surveyoutliers/index.html">surveyoutliers</a>
           helps manage outliers in sample surveys by calculating optimal one-sided winsorizing cutoffs.
+        </li>
+        <li>
+          Package
+<a href="../packages/faoutlier/index.html">faoutlier</a>
+          provides tools for detecting and summarize influential cases that can affect exploratory and confirmatory factor analysis models and  structural equation models.
         </li>
       </ul>
     </div>
@@ -594,21 +648,31 @@ finding outliers in the regression setting.  RCS is supported by
     <li><a href="../packages/cellWise/index.html">cellWise</a></li>
     <li><a href="../packages/CerioliOutlierDetection/index.html">CerioliOutlierDetection</a></li>
     <li><a href="../packages/CircOutlier/index.html">CircOutlier</a></li>
+    <li><a href="../packages/compositions/index.html">compositions</a></li>
+    <li><a href="../packages/CoordinateCleaner/index.html">CoordinateCleaner</a></li>
     <li><a href="../packages/CrossClustering/index.html">CrossClustering</a></li>
+    <li><a href="../packages/dave/index.html">dave</a></li>
     <li><a href="../packages/dbscan/index.html">dbscan</a></li>
+    <li><a href="../packages/ddalpha/index.html">ddalpha</a></li>
     <li><a href="../packages/DDoutlier/index.html">DDoutlier</a></li>
     <li><a href="../packages/densratio/index.html">densratio</a></li>
     <li><a href="../packages/depth.plot/index.html">depth.plot</a></li>
+    <li><a href="../packages/DescTools/index.html">DescTools</a></li>
     <li><a href="../packages/dixonTest/index.html">dixonTest</a></li>
+    <li><a href="../packages/DJL/index.html">DJL</a></li>
     <li><a href="../packages/dlookr/index.html">dlookr</a></li>
+    <li><a href="../packages/DMwR2/index.html">DMwR2</a></li>
     <li><a href="../packages/dobin/index.html">dobin</a></li>
     <li><a href="../packages/EFDR/index.html">EFDR</a></li>
     <li><a href="../packages/enpls/index.html">enpls</a></li>
     <li><a href="../packages/evtclass/index.html">evtclass</a></li>
     <li><a href="../packages/extremevalues/index.html">extremevalues</a></li>
+    <li><a href="../packages/FactoInvestigate/index.html">FactoInvestigate</a></li>
+    <li><a href="../packages/faoutlier/index.html">faoutlier</a></li>
     <li><a href="../packages/FastHCS/index.html">FastHCS</a></li>
     <li><a href="../packages/FastPCS/index.html">FastPCS</a></li>
     <li><a href="../packages/FastRCS/index.html">FastRCS</a></li>
+    <li><a href="../packages/fda.usc/index.html">fda.usc</a></li>
     <li><a href="../packages/fpmoutliers/index.html">fpmoutliers</a></li>
     <li><a href="../packages/HDoutliers/index.html">HDoutliers</a></li>
     <li><a href="../packages/HighDimOut/index.html">HighDimOut</a></li>
